fix signup form not showing, add axois http request

--- a/applications/client/welcome-page/src/login/index.module.css
+++ b/applications/client/welcome-page/src/login/index.module.css
@@ -1,3 +1,7 @@
+.title {
+  justify-content: center !important;
+}
+
 .form {
   margin: 10px 10px 10px 10px;
   background-color: #e7f1eb !important;
@@ -6,9 +10,6 @@
   margin: 30px 30px 30px 30px;
 }
 
-.formInputComponent {
-  margin-bottom: 1rem;
-}
 .formLabel {
   font-size: 1rem;
   color: rgb(17, 17, 17);
@@ -25,7 +26,6 @@
   float: right;
 }
 
-/* button */
 .loginBtn {
   width: 100% !important;
   height: 70%;
